@@ -29,6 +29,12 @@ jobs:
           - x64
     name: "Python: ${{ matrix.py }}-${{ matrix.architecture }} on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
+    services:
+      selenium:
+        image: "selenium/standalone-firefox"
+        ports:
+          - 4444:4444
+          - 5900:5900
     steps:
     - uses: actions/checkout@v2
     - name: Setup python
@@ -36,16 +42,17 @@ jobs:
       with:
           python-version: ${{ matrix.py }}
           architecture: ${{ matrix.architecture }}
-    - name: Install requirements
+    - name: Install tox
       run: |
         sudo apt-get update
-        sudo apt-get install firefox firefox-geckodriver gettext gettext-base xvfb
         pip install tox
-    - name: Running tox
-      env:
-        DISPLAY: ":99"
+    # `localhost` did not work
+    - name: Set URL environment variable
       run: |
-        Xvfb :99 &
+        echo "URL=http://`hostname -i`:8522" >> $GITHUB_ENV
+        echo "URL: "$URL
+    - name: Run tox
+      run: |
         tox -e py --
   lint:
     runs-on: ubuntu-latest
