@@ -2,9 +2,9 @@
 zip_ok = false
 
 [tool:pytest]
-python_files = test_*.py
+python_files = test.py
 testpaths =
-    deformdemo/test.py
+    .
 addopts = -W always
 
 [compile_catalog]
