@@ -12,7 +12,7 @@ envlist =
 
 [testenv]
 usedevelop = true
-passenv = DISPLAY WEBDRIVER TRAVIS URL WAITTOSTART CONTAINERTZ
+passenv = DISPLAY WEBDRIVER URL WAITTOSTART CONTAINERTZ
 whitelist_externals = tox.sh
 commands =
     pip install -Ur requirements-dev.txt
